chore: graduate CLAUDE.md decisions into Conventions/Gotchas + archive (#18)
The Decisions & Learnings log had grown to 24 dense entries (~12.7 KB, read every
turn). Rather than raise the entry cap, optimize: graduate the stable shipped-feature
entries into updated Architecture + new Conventions/Gotchas prose, slim D&L to the 3
still-active decisions, and preserve the full chronology in
docs/decisions/2026-06-jvmlens-buildout.md. CLAUDE.md is now ~8.7 KB (~31% lighter
per turn); the 500-char lint cap stays as the guardrail.


Claude-Session: https://claude.ai/code/session_01HrFrLH7hRbT4vDmqfyWYnf

Co-authored-by: Claude Opus 4.8 (1M context) <noreply@anthropic.com>